--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -8,7 +8,7 @@
     "packageName": "org.project36.qualopt",
     "packageFolder": "org/project36/qualopt",
     "serverPort": "8080",
-    "authenticationType": "jwt",
+    "authenticationType": "session",
     "hibernateCache": "ehcache",
     "clusteredHttpSession": false,
     "websocket": false,
@@ -27,6 +27,7 @@
     "applicationType": "monolith",
     "testFrameworks": [],
     "jhiPrefix": "jhi",
-    "enableTranslation": false
+    "enableTranslation": false,
+    "rememberMeKey": "73d687646e68ec7242c00c4e0c9c9aa0f9ef4215"
   }
 }
