--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -91,12 +91,9 @@ jhipster:
             time-to-live-seconds: 3600 # By default objects stay 1 hour in the cache
             max-entries: 1000 # Number of objects in each cache entry
     security:
-        authentication:
-            jwt:
-                secret: 6bcd2a513515d7c6115685cd666fbf87540719b2
-                # Token is valid 24 hours
-                token-validity-in-seconds: 86400
-                token-validity-in-seconds-for-remember-me: 2592000
+        remember-me:
+            # security key (this key should be unique for your application, and kept secret)
+            key: 73d687646e68ec7242c00c4e0c9c9aa0f9ef4215
     mail: # specific JHipster mail property, for standard properties see MailProperties
         from: QualOpt@localhost
         base-url: http://my-server-url-to-change # Modify according to your server's URL
