--- a/src/test/resources/config/application.yml
+++ b/src/test/resources/config/application.yml
@@ -86,11 +86,9 @@ jhipster:
         from: test@localhost
         base-url: http://127.0.0.1:8080
     security:
-        authentication:
-            jwt:
-                secret: 6bcd2a513515d7c6115685cd666fbf87540719b2
-                # Token is valid 24 hours
-                token-validity-in-seconds: 86400
+        remember-me:
+            # security key (this key should be unique for your application, and kept secret)
+            key: 73d687646e68ec7242c00c4e0c9c9aa0f9ef4215
     metrics: # DropWizard Metrics configuration, used by MetricsConfiguration
         jmx.enabled: true
         logs: # Reports Dropwizard metrics in the logs
