--- a/src/main/resources/.h2.server.properties
+++ b/src/main/resources/.h2.server.properties
@@ -1,4 +1,5 @@
 #H2 Server Properties
+#Sat Aug 19 16:27:09 NZST 2017
 0=JHipster H2 (Memory)|org.h2.Driver|jdbc\:h2\:mem\:qualopt|QualOpt
 webAllowOthers=true
 webPort=8082
