Added ignored files (package.json)

--- a/.gitignore
+++ b/.gitignore
@@ -224,3 +224,11 @@ bin/
 .cache-main
 .scala_dependencies
 .worksheet
+
+package-lock\.json
+
+package\.json
+
+src/main/webapp/app/account/password-reset/init/password-reset-init\.component\.html
+
+src/main/webapp/app/account/register/register\.component\.html
