--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -46,6 +46,7 @@ spring:
     thymeleaf:
         mode: XHTML
     social:
+        # Google API Keys created under the email: wmol664@aucklanduni.ac.nz and product name: QualOpt
         # see https://developers.google.com/+/web/signin/server-side-flow#step_1_create_a_client_id_and_client_secret
         google:
             client-id: 409706338424-gpgeh591k6jku12eu0o31abscosngoal.apps.googleusercontent.com
