--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,14 @@
             <id>central</id>
             <url>http://repo.maven.apache.org/maven2/</url>
         </repository>
+        <repository>
+            <id>spring-milestones</id>
+            <name>Spring Milestones</name>
+            <url>https://repo.spring.io/libs-milestone</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
     </repositories>
 
     <parent>
@@ -455,6 +463,11 @@
             <artifactId>javamail-mock2-fullmock</artifactId>
             <version>0.5-beta4</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.social</groupId>
+            <artifactId>spring-social-github</artifactId>
+            <version>1.0.0.M4</version>
         </dependency>
         <!-- jhipster-needle-maven-add-dependency -->
     </dependencies>
