--- a/src/main/resources/.h2.server.properties
+++ b/src/main/resources/.h2.server.properties
@@ -1,5 +1,5 @@
 #H2 Server Properties
-#Mon Aug 21 02:24:58 NZST 2017
+#Tue Mar 20 12:24:07 NZDT 2018
 0=JHipster H2 (Memory)|org.h2.Driver|jdbc\:h2\:mem\:qualopt|QualOpt
 webAllowOthers=true
 webPort=8082
