--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -50,12 +50,8 @@ spring:
         # see https://developers.google.com/+/web/signin/server-side-flow#step_1_create_a_client_id_and_client_secret
         google:
             client-id: 409706338424-gpgeh591k6jku12eu0o31abscosngoal.apps.googleusercontent.com
-            client-secret: 4mXwrXbgZ9qKM7EQyrwLaXKP
+            client-secret: 
 
-        # see https://developers.facebook.com/docs/facebook-login/v2.2
-        facebook:
-            client-id: 1703434426389778
-            client-secret: 12a4ba62e573d9b78b4636d4dd3a497d
 
         # jhipster-needle-add-social-configuration
 
